--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
       </div>
 
       <div class="slide">
-        <h1>i work at bocoup</h1>
         <a href="http://bocoup.com"><img src="./images/bocoup.png" alt="Bocoup"></a>
         <div id="bocoup-related">
           <a href="http://training.bocoup.com"><img src="./images/bocoup-training.png" alt="Bocoup Training"></a>
@@ -85,10 +84,6 @@
       </div>
 
       <div class="slide">
-        <h1>What's my point?</h1>
-      </div>
-
-      <div class="slide">
         <h1>
           let's talk about the
           <s>adaptive</s>
@@ -99,15 +94,50 @@
           <s>responsive</s>
           web
         </h1>
-        </div>
       </div>
 
       <div class="slide">
         <h1>
           The Web
         </h1>
-        </div>
       </div>
+
+      <div class="slide">
+        <h1>
+          So, what's actually new here?
+        </h1>
+      </div>
+
+      <div class="slide">
+        <h1>max-width?</h1>
+        <p>Sorta. 6 years ago it was in IE7.</p>
+        <a href="http://caniuse.com/minmaxwh">source</a>
+      </div>
+
+      <div class="slide">
+        <h1>actually good phones?</h1>
+        <p>I guess. iPhone was also 6 years ago.</p>
+        <code>&lt;meta name="viewport" content="width=device-width"></code>
+      </div>
+
+      <div class="slide">
+        <h1>@media?</h1>
+        <p>Well sure. 2 years ago it was in IE9.</p>
+        <a href="http://caniuse.com/css-mediaqueries">source</a>
+      </div>
+
+      <div class="slide">
+        <h1>This isn't about technology.</h1>
+      </div>
+
+      <div class="slide">
+        <h1>This is about THE DREAM.</h1>
+      </div>
+
+      <div class="slide">
+        <a href="http://turntable.fm"><img src="./images/turntable.jpg" alt="turntable"></a>
+      </div>
+
 
     </div>
   </body>
