not a bad little slide deck, hmm hmmmm

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
 
       <div class="slide">
-        <blockquote>Recently, an emergent discipline called “<mark>responsive architecture</mark>” has begun asking how physical spaces can respond to the presence of people passing through them... We can (make our designs) not only more flexible, but more <mark>adaptive</mark> to the media that renders them. In short, we need to practice <mark>responsive</mark> web design.</blockquote>
+        <blockquote>Recently, an emergent discipline called “<mark>responsive architecture</mark>” has begun asking how physical spaces can respond to the presence of people passing through them... We can (make our designs) not only more flexible, but more <mark>adaptive</mark> to the media that renders them. In short, we need to practice <mark>responsive web design</mark>.</blockquote>
       </div>
 
       <div class="slide">
