first round of updates

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>The Dream</title>
+    <title>Design</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="slide.css" media="screen">
     <link rel="stylesheet" href="custom.css" media="screen">
@@ -44,7 +44,7 @@
 
       <div class="slide">
         <h1>
-          Let's talk about the
+          Let's talk about
           <br>
           <s>adaptive</s>
           <s>flexible</s>
@@ -53,9 +53,20 @@
           <s>mobile</s>
           <br>
           <b>responsive</b>
-          web.
+          design.
         </h1>
         </div>
+      </div>
+
+      <div class="slide">
+        <h1>So, what's new here?</h1>
+        <h2>The concept?</h2>
+        <h2>The technology?</h2>
+        <h2>The buzzword?</h2>
+      </div>
+
+      <div class="slide">
+        <h1>The Concept</h1>
       </div>
 
       <div class="slide">
@@ -100,30 +111,7 @@
       </div>
 
       <div class="slide">
-        <h1>
-          let's talk about the
-          <br>
-          <s>adaptive</s>
-          <s>flexible</s>
-          <s>fluid</s>
-          <s>liquid</s>
-          <s>mobile</s>
-          <s>responsive</s>
-          <br>
-          web
-        </h1>
-      </div>
-
-      <div class="slide">
-        <h1 class="big">
-          The Web
-        </h1>
-      </div>
-
-      <div class="slide">
-        <h1>
-          So, if the idea isn't new, what is?
-        </h1>
+        <h1>The Technology</h1>
       </div>
 
       <div class="slide">
@@ -150,32 +138,51 @@
       </div>
 
       <div class="slide">
-        <h1>This isn't about technology.</h1>
+        <h1>The Buzzword</h1>
       </div>
 
       <div class="slide">
-        <h1>This is about</h1>
-        <h1 class="big">THE DREAM.</h1>
+        <img src="./images/iced.png" alt="Smirnoff Ice">
       </div>
 
       <div class="slide">
-        <a href="http://teamtreehouse.com"><img src="./images/dream-treehouse.png" alt="treehouse"></a>
+        <img src="./images/gallardo.png" alt="Lamborghini Gallardo">
       </div>
 
       <div class="slide">
-        <a href="http://openvisconf.com"><img src="./images/dream-openvis.png" alt="OpenVis Conf"></a>
+        <h2>The concept is not new</h2>
+        <h2>The technology is not new</h2>
+        <h2>The buzzword is new<br>(but who cares)</h2>
       </div>
 
       <div class="slide">
-        <a href="http://status.heroku.com"><img src="./images/dream-heroku.png" alt="status.heroku.com"></a>
+        <h1>Maybe we shouldn't focus on the "Responsive" part.</h1>
       </div>
 
       <div class="slide">
-        <a href="http://wikipedia.org"><img src="./images/dream-wikipedia.png" alt="Wikipedia"></a>
+        <h1>
+          let's talk about
+          <br>
+          <s>adaptive</s>
+          <s>flexible</s>
+          <s>fluid</s>
+          <s>liquid</s>
+          <s>mobile</s>
+          <s>responsive</s>
+          <br>
+          design
+        </h1>
       </div>
 
       <div class="slide">
-        <h1>Stop thinking about the latest cool design trend...</h1>
+        <h1>
+          Design
+        </h1>
+        <h2>Making it easy for people to find and understand your content.</h2>
+      </div>
+
+      <div class="slide">
+        <h1>Stop thinking about making stuff responsive...</h1>
       </div>
 
       <div class="slide">
@@ -184,11 +191,19 @@
       </div>
 
       <div class="slide">
-        <h1>Think about changing the way we live.</h1>
+        <h1>Make content more<br><em>accessible</em><br>and<br><em>understandable</em><br>than ever.</h1>
       </div>
 
       <div class="slide">
-        <img src="./images/heimlich.png" alt="google search for hiemlich">
+        <a href="http://status.heroku.com"><img src="./images/dream-heroku.png" alt="status.heroku.com"></a>
+      </div>
+
+      <div class="slide">
+        <a href="http://openvisconf.com"><img src="./images/dream-openvis.png" alt="OpenVis Conf"></a>
+      </div>
+
+      <div class="slide">
+        <a href="http://teamtreehouse.com"><img src="./images/dream-treehouse.png" alt="treehouse"></a>
       </div>
 
       <div class="slide">
