--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Design</title>
+    <title>Greg Smith Responsive Design Talk</title>
     <meta name="viewport" content="width=device-width">
+    <link rel="icon" type="image/png" href="./images/me.png">
     <link rel="stylesheet" href="slide.css" media="screen">
     <link rel="stylesheet" href="custom.css" media="screen">
     <script src="lib/jquery-1.9.0.min.js"></script>
@@ -26,8 +27,9 @@
       <div class="slide">
         <h1>I'm Greg</h1>
         <p>
+          <a class="no-underline" href="http://twitter.com/_gsmith">
           <img src="./images/me.png" alt="">
-          <a class="no-underline" href="http://twitter.com/_gsmith">@_gsmith</a>
+          @_gsmith</a>
         </p>
       </div>
 
@@ -207,7 +209,8 @@
       </div>
 
       <div class="slide">
-        <h1>Thank you.</h1>
+        <h1>Thank you!</h1>
+        slides at<br><a href="http://static.incompl.com/ecoast">static.incompl.com/ecoast</a>
       </div>
 
     </div>
