padding at bottom

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
       <div class="slide">
         <h1>Thank you!</h1>
-        slides at<br><a href="http://static.incompl.com/ecoast">static.incompl.com/ecoast</a>
+        <p>slides at<br><a href="http://static.incompl.com/ecoast">static.incompl.com/ecoast</a></p>
       </div>
 
     </div>
