lengthened the presentation, improved last part even more

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
       </div>
 
       <div class="slide">
-        <a href="http://bocoup.com"><img src="./images/bocoup.png" alt="Bocoup"></a>
+        <a id="bocoup" href="http://bocoup.com">
+          <img src="./images/bocoup.png" alt="Bocoup">
+        </a>
         <div id="bocoup-related">
           <a href="http://training.bocoup.com"><img src="./images/bocoup-training.png" alt="Bocoup Training"></a>
           <a href="http://learnlayout.com"><img src="./images/bocoup-learnlayout.png" alt="Bocoup Training"></a>
@@ -62,19 +64,20 @@
 
       <div class="slide">
         <h1>So, what's new here?</h1>
-        <h2>The concept?</h2>
+        <h2>The idea?</h2>
         <h2>The technology?</h2>
         <h2>The buzzword?</h2>
       </div>
 
       <div class="slide">
-        <h1>The Concept</h1>
+        <h1>The Idea</h1>
       </div>
 
       <div class="slide">
         <blockquote>
           Let's call this facility for readers to be able to adapt web based content for themselves <mark>adaptability</mark>. My heretical viewpoint is that adaptability isn't a problem, it is a particular strength of the web.
         </blockquote>
+        <p>-Aaron Gustafson</p>
       </div>
 
       <div class="slide">
@@ -91,7 +94,7 @@
       </div>
 
       <div class="slide">
-        <blockquote>Recently, an emergent discipline called “<mark>responsive architecture</mark>” has begun asking how physical spaces can respond to the presence of people passing through them... We can (make our designs) not only more flexible, but more <mark>adaptive</mark> to the media that renders them. In short, we need to practice <mark>responsive web design</mark>.</blockquote>
+        <blockquote>Recently, an emergent discipline called “<mark>responsive architecture</mark>” has begun asking how physical spaces can respond to the presence of people passing through them... We can (make our designs) not only more flexible, but more <mark>adaptive</mark> to the media that renders them. In short, we need to practice <mark>responsive web design</mark>.</blockquote><p>-Ethan Marcotte</p>
       </div>
 
       <div class="slide">
@@ -114,6 +117,10 @@
 
       <div class="slide">
         <h1>The Technology</h1>
+      </div>
+
+      <div class="slide">
+        <img src="./images/ajax.jpg" alt="AJAX">
       </div>
 
       <div class="slide">
@@ -180,11 +187,26 @@
         <h1>
           Design
         </h1>
-        <h2>Making it easy for people to find and understand your content.</h2>
+        <h2>Making it easy for people to find, understand, and act on your content.</h2>
       </div>
 
       <div class="slide">
-        <h1>Stop thinking about making stuff responsive...</h1>
+        <h1>Web Design</h1>
+        <h2>User Experience, Interaction Design, Information Architecture,
+          UI Design, Navigation Design, Information Design, Visual Design etc.</h2>
+        <p>(thanks <a href="http://www.jjg.net/elements/">JJJ</a>)</p>
+      </div>
+
+      <div class="slide">
+        <h1 class="big">Content is...<h1>
+      </div>
+
+      <div class="slide">
+        <img src="./images/content.jpg" alt="God Emporor of Dune">
+      </div>
+
+      <div class="slide">
+        <h1>It's not "make stuff responsive"<h1>
       </div>
 
       <div class="slide">
@@ -206,6 +228,43 @@
 
       <div class="slide">
         <a href="http://teamtreehouse.com"><img src="./images/dream-treehouse.png" alt="treehouse"></a>
+      </div>
+
+      <div class="slide">
+        <h1>Think about</h1>
+        <img src="./images/5d.png" alt="5 Dimensional">
+        <p>
+          Width, Height, Time, Hardware, Software
+        </p>
+      </div>
+
+      <div class="slide">
+        <h1 class="no-margin">Don't worry about</h1>
+        <div id="bad">
+          <img src="./images/bad-ie6.png" alt="IE6">
+          <img src="./images/bad-pixels.jpg" alt="Pixels">
+          <img src="./images/bad-consistency.jpg" alt="Consistency">
+          <img src="./images/bad-ratio.png" alt="Golden Ratio">
+        </div>
+      </div>
+
+      <div class="slide">
+        <h2>The world is changing.</h2>
+        <h2>The tools are changing.</h2>
+        <h2>Our goal is the same.</h2>
+      </div>
+
+      <div class="slide">
+        <h1>Help people find, understand, and act on information.</h1>
+      </div>
+
+      <div class="slide">
+        <h1>"By Any Means Necessary"</h1>
+        <p>-Edward Tufte</p>
+      </div>
+
+      <div class="slide">
+        <h2>(even if it means resorting to responsive design)<h2>
       </div>
 
       <div class="slide">
