last practice round changes

--- a/index.html
+++ b/index.html
@@ -59,14 +59,22 @@
           <b>responsive</b>
           design.
         </h1>
-        </div>
       </div>
 
       <div class="slide">
-        <h1>So, what's new here?</h1>
-        <h2>The idea?</h2>
-        <h2>The technology?</h2>
-        <h2>The buzzword?</h2>
+        <h1>
+          Why is it Responsive now?
+        </h1>
+        <h1>
+          How has Design changed?
+        </h1>
+      </div>
+
+      <div class="slide">
+        <h1>Why is it Responsive now?</h1>
+        <h2>New idea?</h2>
+        <h2>New technology?</h2>
+        <h2>New buzzword?</h2>
       </div>
 
       <div class="slide">
@@ -77,7 +85,7 @@
         <blockquote>
           Let's call this facility for readers to be able to adapt web based content for themselves <mark>adaptability</mark>. My heretical viewpoint is that adaptability isn't a problem, it is a particular strength of the web.
         </blockquote>
-        <p>-Aaron Gustafson</p>
+        <p>-John Allsopp</p>
       </div>
 
       <div class="slide">
@@ -155,17 +163,23 @@
       </div>
 
       <div class="slide">
+        <img src="./images/happy-accidents.jpg" alt="Happy Accidents">
+      </div>
+
+      <div class="slide">
         <img src="./images/gallardo.png" alt="Lamborghini Gallardo">
       </div>
 
       <div class="slide">
-        <h2>The concept is not new</h2>
-        <h2>The technology is not new</h2>
-        <h2>The buzzword is new<br>(but who cares)</h2>
+        <h2>Well?</h2>
+        <h2>The idea</h2>
+        <h2>The technology</h2>
+        <h2>The buzzword</h2>
       </div>
 
       <div class="slide">
-        <h1>Maybe we shouldn't focus on the "Responsive" part.</h1>
+        <h1>Forget "Responsive"</h1>
+        <h1>How has Design changed?</h1>
       </div>
 
       <div class="slide">
@@ -194,14 +208,15 @@
         <h1>Web Design</h1>
         <h2>User Experience, Interaction Design, Information Architecture,
           UI Design, Navigation Design, Information Design, Visual Design etc.</h2>
-        <p>(thanks <a href="http://www.jjg.net/elements/">JJJ</a>)</p>
+        <p>(thanks <a href="http://www.jjg.net/elements/">JJG</a>)</p>
       </div>
 
       <div class="slide">
-        <h1 class="big">Content is...<h1>
+        <h1>One thing that definitely hasn't changed...<h1>
       </div>
 
       <div class="slide">
+        <h2>Content is...<h2>
         <img src="./images/content.jpg" alt="God Emporor of Dune">
       </div>
 
@@ -231,7 +246,10 @@
       </div>
 
       <div class="slide">
-        <h1>Think about</h1>
+        <h1>How?</h1>
+      </div>
+
+      <div class="slide">
         <img src="./images/5d.png" alt="5 Dimensional">
         <p>
           Width, Height, Time, Hardware, Software
@@ -239,7 +257,6 @@
       </div>
 
       <div class="slide">
-        <h1 class="no-margin">Don't worry about</h1>
         <div id="bad">
           <img src="./images/bad-ie6.png" alt="IE6">
           <img src="./images/bad-pixels.jpg" alt="Pixels">
@@ -249,13 +266,11 @@
       </div>
 
       <div class="slide">
-        <h2>The world is changing.</h2>
-        <h2>The tools are changing.</h2>
-        <h2>Our goal is the same.</h2>
+        <h1>Conclusion</h1>
       </div>
 
       <div class="slide">
-        <h1>Help people find, understand, and act on information.</h1>
+        <img src="./images/evolution.png" alt="Evolution">
       </div>
 
       <div class="slide">
