--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       </div>
 
       <div class="slide">
-        <h1>It's not "make stuff responsive"<h1>
+        <h1>"make it responsive"<h1>
       </div>
 
       <div class="slide">
@@ -230,7 +230,9 @@
       </div>
 
       <div class="slide">
-        <h1>Make content more<br><em>accessible</em><br>and<br><em>understandable</em><br>than ever.</h1>
+        <h1>accessible</h1>
+        <h1>understandable</h1>
+        <h1>actionable</h1>
       </div>
 
       <div class="slide">
@@ -279,7 +281,7 @@
       </div>
 
       <div class="slide">
-        <h2>(even if it means resorting to responsive design)<h2>
+        <h2>Responsive or not.<h2>
       </div>
 
       <div class="slide">
